# drop-ot

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: buildOptions.cmake  findDependancies.cmake
drop-ot/: CMakeLists.txt  Defines.h  IknpOtExt.cpp  IknpOtExt.h  MasnyRindal.cpp  MasnyRindal.h  Tools.h  UnitTests.h  config.h.in
frontend/: CMakeLists.txt  main.cpp
